--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,9 @@
     "polymer": "Polymer/polymer#^1.4.0",
     "app-layout": "^0.10.6",
     "paper-menu": "^1.2.2",
-    "paper-item": "^1.2.1"
+    "paper-item": "^1.2.1",
+    "iron-form": "^1.1.4",
+    "paper-input": "^1.1.22"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
