--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "paper-menu": "^1.2.2",
     "paper-item": "^1.2.1",
     "iron-form": "^1.1.4",
-    "paper-input": "^1.1.22"
+    "paper-input": "^1.1.22",
+    "paper-radio-group": "^1.2.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
