--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "paper-item": "^1.2.1",
     "iron-form": "^1.1.4",
     "paper-input": "^1.1.22",
-    "paper-radio-group": "^1.2.1"
+    "paper-radio-group": "^1.2.1",
+    "app-route": "PolymerElements/app-route#^0.9.3"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
