--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "iron-form": "^1.1.4",
     "paper-input": "^1.1.22",
     "paper-radio-group": "^1.2.1",
-    "app-route": "PolymerElements/app-route#^0.9.3"
+    "app-route": "PolymerElements/app-route#^0.9.3",
+    "iron-pages": "PolymerElements/iron-pages#^1.0.8"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
