--- a/package.json
+++ b/package.json
@@ -21,12 +21,9 @@
   "homepage": "https://github.com/eneasgallego/encuestas-heineken#readme",
   "dependencies": {
     "express": "^4.14.0",
-    "gulp-express": "^0.3.5",
-    "mkdirs": "0.0.2",
-    "mongodb": "^2.2.12"
-  },
-  "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-bower": "0.0.13"
+    "gulp-bower": "0.0.13",
+    "gulp-express": "^0.3.5",
+    "gulp-rename": "^1.2.2"
   }
 }
