--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-bower": "0.0.13",
     "gulp-express": "^0.3.5",
     "gulp-rename": "^1.2.2",
-    "gulp-util": "^3.0.7"
+    "gulp-util": "^3.0.7",
+    "mongodb": "^2.2.12"
   }
 }
