--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "paper-input": "^1.1.22",
     "paper-radio-group": "^1.2.1",
     "app-route": "PolymerElements/app-route#^0.9.3",
-    "iron-pages": "PolymerElements/iron-pages#^1.0.8"
+    "iron-pages": "PolymerElements/iron-pages#^1.0.8",
+    "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
+    "paper-spinner": "PolymerElements/paper-spinner#^1.2.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
