--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "iron-pages": "PolymerElements/iron-pages#^1.0.8",
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
     "paper-spinner": "PolymerElements/paper-spinner#^1.2.1",
-    "iron-list": "PolymerElements/iron-list#^1.3.14"
+    "iron-list": "PolymerElements/iron-list#^1.3.14",
+    "iron-image": "PolymerElements/iron-image#^1.2.5"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
