--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
     "iron-image": "PolymerElements/iron-image#^1.2.5",
     "neon-animation": "PolymerElements/neon-animation#^1.2.4",
-    "vaadin-icons": "^2.0.0"
+    "vaadin-icons": "^2.0.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.4"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
