--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/eneasgallego/encuestas-heineken#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "buffer": "^5.0.2",
+    "crypto": "0.0.3",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
