--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "neon-animation": "PolymerElements/neon-animation#^1.2.4",
     "vaadin-icons": "^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.4",
-    "gold-email-input": "PolymerElements/gold-email-input#^1.0.9"
+    "gold-email-input": "PolymerElements/gold-email-input#^1.0.9",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
