--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "buffer": "^5.0.2",
+    "cookie-parser": "^1.4.3",
     "crypto": "0.0.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
     "gulp-express": "^0.3.5",
