--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "gulp-util": "^3.0.7",
     "md5": "^2.2.1",
     "mongodb": "^2.2.12",
-    "multer": "^1.2.0"
+    "multer": "^1.2.0",
+    "nodemailer": "^2.7.0",
+    "nodemailer-smtp-transport": "^2.7.2"
   }
 }
