--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "vaadin-icons": "^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.4",
     "gold-email-input": "PolymerElements/gold-email-input#^1.0.9",
-    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.2"
+    "paper-checkbox": "^1.4.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
